--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@
 
 #leftTitle {
   color: #d1bf94;
+  cursor: pointer;
   font-family: 'Roboto Slab', serif;
   font-size: 40px;
   padding-left: 50px; }
